--- a/SolarSystem/SolarSystem/SolarSystem.vcxproj.filters
+++ b/SolarSystem/SolarSystem/SolarSystem.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="scenetexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="plane.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="scenetexture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="plane.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
